--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
             </tr>          
         </table>
 
-        <script src="/My Drive/MyStuff/Calcurako/funcionalidad.js"></script>
+        <script src="funcionalidad.js"></script>
     </body>
 </html>
