--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </tr>
             <tr>
                 <td><button id="Corte">Corte</button></td>
-                <td><input id="corte1"></input></td>
-                <td><input id="corte2"></input></td>
-                <td><input id="corte3"></input></td>
+                <td><input type= "number" id="corte1"></input></td>
+                <td><input type= "number" id="corte2"></input></td>
+                <td><input type= "number" id="corte3"></input></td>
             </tr>
             <tr>
                 <td><button id="Muerto">Muerto</button></td>
