--- a/index.html
+++ b/index.html
@@ -24,51 +24,51 @@
             </tr>
             <tr>
                 <td><button id="Muerto">Muerto</button></td>
-                <td><input id="muerto1"></input></td>
-                <td><input id="muerto2"></input></td>
-                <td><input id="muerto3"></input></td>
+                <td><input type= "number" id="muerto1"></input></td>
+                <td><input type= "number" id="muerto2"></input></td>
+                <td><input type= "number" id="muerto3"></input></td>
             </tr>
             <tr>
                 <td><button id="Comodin">Comodin</button></td>
-                <td><input id="comodin1"></input></td>
-                <td><input id="comodin2"></input></td>
-                <td><input id="comodin3"></input></td>
+                <td><input type= "number" id="comodin1"></input></td>
+                <td><input type= "number" id="comodin2"></input></td>
+                <td><input type= "number" id="comodin3"></input></td>
             </tr>
             <tr>
                 <td><button id="Canasta Pura">Canasta Pura</button></td>
-                <td><input id="canastapura1"></input></td>
-                <td><input id="canastapura2"></input></td>
-                <td><input id="canastapura3"></input></td>
+                <td><input type= "number" id="canastapura1"></input></td>
+                <td><input type= "number" id="canastapura2"></input></td>
+                <td><input type= "number" id="canastapura3"></input></td>
             </tr>
             <tr>
                 <td><button id="Canasta Impura">Canasta Impura</button></td>
-                <td><input id="canastaimpura1"></input></td>
-                <td><input id="canastaimpura2"></input></td>
-                <td><input id="canastaimpura3"></input></td>
+                <td><input type= "number" id="canastaimpura1"></input></td>
+                <td><input type= "number" id="canastaimpura2"></input></td>
+                <td><input type= "number" id="canastaimpura3"></input></td>
             </tr>
             <tr>
                 <td><button id="Numero 1">Numero 1</button></td>
-                <td><input id="primero1"></input></td>
-                <td><input id="primero2"></input></td>
-                <td><input id="primero3"></input></td>
+                <td><input type= "number" id="primero1"></input></td>
+                <td><input type= "number" id="primero2"></input></td>
+                <td><input type= "number" id="primero3"></input></td>
             </tr>
             <tr>
                 <td><button id="Numero 2">Numero 2</button></td>
-                <td><input id="segundo1"></input></td>
-                <td><input id="segundo2"></input></td>
-                <td><input id="segundo3"></input></td>
+                <td><input type= "number" id="segundo1"></input></td>
+                <td><input type= "number" id="segundo2"></input></td>
+                <td><input type= "number" id="segundo3"></input></td>
             </tr>
             <tr>
                 <td><button id="Numeros 3 al 7">Numeros 3 al 7</button></td>
-                <td><input id="chicas1"></input></td>
-                <td><input id="chicas2"></input></td>
-                <td><input id="chicas3"></input></td>
+                <td><input type= "number" id="chicas1"></input></td>
+                <td><input type= "number" id="chicas2"></input></td>
+                <td><input type= "number" id="chicas3"></input></td>
             </tr>
             <tr>
                 <td><button id="Numeros 8 al 13">Numeros 8 al 13</button></td>
-                <td><input id="grandes1"></input></td>
-                <td><input id="grandes2"></input></td>
-                <td><input id="grandes3"></input></td>
+                <td><input type= "number" id="grandes1"></input></td>
+                <td><input type= "number" id="grandes2"></input></td>
+                <td><input type= "number" id="grandes3"></input></td>
             </tr>
             <tr>
                 <td><button id="Subtotal">Subtotal</button></td>
