--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculadora con JavaScript</title>
     <link type="text/css" href="estilo.css" rel="stylesheet">
+    <meta
+        name="description"           
+        content="This is a simple calculator for a burako game between
+        3 players." > 
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
